// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFeaturePaywall should not render the passed component when the feature is unavailable 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Revenue
      </h1>
    </div>
    <div
      class="page-container page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
          >
            <div>
              <img
                alt="Feature preview"
                class="img-fluid"
                src="/static/private/img/paywalls/screens/revenue-statistics.png"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <span
                  class="badge advanced badge badge-primary"
                >
                  Advanced Plan
                </span>
              </div>
              <h1
                class="contentTitle"
              >
                Track revenue from support
              </h1>
              <div
                class="description"
              >
                <p>
                  Uncover upsell opportunities, track revenue generated per agents to compensate your team based on actual sales.
                </p>
              </div>
              <div
                class="testimonial"
              >
                <p
                  class="testimonialText"
                >
                  At Shinesty, our agents convert visitors into customers by using pre-sell questions sent via chat campaigns. I see the concrete results of our actions thanks to Revenue Statistics.
                </p>
                <div
                  class="d-flex align-items-center author"
                >
                  <img
                    alt="avatar"
                    class="mr-3 avatar"
                    src="/static/private/img/paywalls/avatars/cody-szymanski.png"
                  />
                  <div>
                    <p
                      class="authorName mb-1"
                    >
                      <strong>
                        Cody Szymanski
                      </strong>
                    </p>
                    <p
                      class="authorDetails"
                    >
                      Customer Experience Manager
                       
                      at
                       
                      <a
                        href="https://www.shinesty.com/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Shinesty
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <a
                    to="[object Object]"
                  >
                    <button
                      class="upgradeButton btn btn-outline-warning"
                      type="button"
                    >
                      <span
                        class="mr-2 upgradeLabel"
                      >
                        Upgrade to Advanced
                      </span>
                      <img
                        alt="upgrade-icon"
                        class="upgradeIcon"
                        src="test-file-stub"
                      />
                    </button>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`withFeaturePaywall should not render the passed component when the feature is unavailable and use a custom paywall 1`] = `
<div>
  <div
    data-testid="custom-paywall-component"
  >
    Custom Paywall
  </div>
</div>
`;

exports[`withFeaturePaywall should pass custom paywall configuration props 1`] = `
<div>
  <div
    class="full-width pageWrapper"
  >
    <div
      class="d-flex align-items-center justify-content-between flex-wrap page-header pageHeader"
    >
      <h1
        class="d-flex align-items-center"
      >
        Custom page header
      </h1>
    </div>
    <div
      class="page-container page container-fluid"
    >
      <div
        class="paywallContainer"
      >
        <div
          class="align-items-center row"
        >
          <div
            class="mt-5 mt-lg-0 mb-5 mb-lg-0 pl-lg-4 pt-5 pt-lg-0 preview advanced col-12 col-lg-6 col-xl-6"
          >
            <div>
              <img
                alt="Feature preview"
                class="img-fluid"
                src="/static/private/img/paywalls/screens/revenue-statistics.png"
              />
            </div>
          </div>
          <div
            class="pl-lg-5 col-12 col-lg-5 col-xl-5"
          >
            <div
              class="content"
            >
              <div
                class="flex align-items-center"
              >
                <span
                  class="badge advanced badge badge-primary"
                >
                  Advanced Plan
                </span>
              </div>
              <h1
                class="contentTitle"
              >
                Track revenue from support
              </h1>
              <div
                class="description"
              >
                <p>
                  Uncover upsell opportunities, track revenue generated per agents to compensate your team based on actual sales.
                </p>
              </div>
              <div
                class="testimonial"
              >
                <p
                  class="testimonialText"
                >
                  At Shinesty, our agents convert visitors into customers by using pre-sell questions sent via chat campaigns. I see the concrete results of our actions thanks to Revenue Statistics.
                </p>
                <div
                  class="d-flex align-items-center author"
                >
                  <img
                    alt="avatar"
                    class="mr-3 avatar"
                    src="/static/private/img/paywalls/avatars/cody-szymanski.png"
                  />
                  <div>
                    <p
                      class="authorName mb-1"
                    >
                      <strong>
                        Cody Szymanski
                      </strong>
                    </p>
                    <p
                      class="authorDetails"
                    >
                      Customer Experience Manager
                       
                      at
                       
                      <a
                        href="https://www.shinesty.com/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Shinesty
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="upgradeButton"
              >
                <div
                  class="d-flex align-items-center upgradeLink"
                >
                  <a
                    to="[object Object]"
                  >
                    <button
                      class="upgradeButton btn btn-outline-warning"
                      type="button"
                    >
                      <span
                        class="mr-2 upgradeLabel"
                      >
                        Upgrade to Advanced
                      </span>
                      <img
                        alt="upgrade-icon"
                        class="upgradeIcon"
                        src="test-file-stub"
                      />
                    </button>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`withFeaturePaywall should render the passed component when the feature is available 1`] = `
<div>
  <div
    data-testid="paywalled-component"
  >
    Just a component...
  </div>
</div>
`;
